# three_address_code_runtime

./: Cargo.toml  README.md
doc/: required_changes_after_source_code_generation.txt
src/: main.rs
src/common/: mod.rs  number_literal_parser.rs  unwrap.rs
src/evaluator/: evaluator.rs
src/parser/: mod.rs  node.rs  tac.g4  tac.interp  tac.tokens  tac_lexer.g4  tac_lexer.interp  tac_lexerlexer.rs  tac_line.rs  tac_line_type.rs  tac_visitor_nodes.rs  taclistener.rs  tacparser.rs  tacvisitor.rs
src/parser/.antlr/: tac.interp  tac.java  tacBaseListener.java  tacListener.java  tac_lexer.interp  tac_lexer.java
test_resources/sample_files/tac/: assignments.tac  call_statement.tac  function_definition.tac  goto.tac  if_statement.tac  label.tac  loop_application.tac  oop.tac  print.tac  push_pop.tac  return.tac
